# spec-kit

./: .dockerignore  .eslintignore  .git-hook-test.txt  .gitignore  .markdownlint-cli2.jsonc  .prettierignore  .speckit.yaml  AGENTS.md  CHANGELOG.md  LICENSE  README-CN.md  README.md  README.md.origin  SUPPORT.md  pyproject.toml  spec-driven.md
.devcontainer/: devcontainer.json  post-create.sh  setup-git-hooks.sh
docs/: docfx.json  helm-deployment.md  index.md  installation.md  local-development.md  quickstart.md  skills-integration.md  toc.yml  upgrade.md
mcp/: .dockerignore  Dockerfile  README-CN.md  README.md  docker-config.json  evaluation.json  package-lock.json  package.json  tsconfig.json
memory/: constitution.md  test-memory.md
release-server/: .dockerignore  .gitignore  .helmignore  Dockerfile  README-CN.md  README.md  openapi.yaml  pyproject.toml
release-server/chart/: Chart.yaml  README.md  values.yaml
release-server/chart/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  httproute.yaml  ingress.yaml  pvc.yaml  secret.yaml  service.yaml  serviceaccount.yaml
release-server/scripts/: build.sh  delete.sh  release.sh  upload.sh
release-server/src/release_server/: auth.py  config.py  dependencies.py  logger.py  main.py  router.py  storage.py
release-server/src/release_server/services/: __init__.py  package_service.py
release-server/tests/: conftest.py  test_api.py  test_auth.py  test_contract.py  test_negotiation.py  test_package_service.py  test_storage.py
scripts/: resolve-skills.py
templates/: plan-template.md  spec-template.md  speckit-config-template.yaml  system-map-template.md  tasks-template.md
(+154 files in other folders)
